kube-ops-view/ingress_route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-ops-view-private
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - http-private
  routes:
  - match: Host(`kube-ops-view.internal.lainecloud.com`) && Path(`/`)
    kind: Rule
    services:
    - name: kube-ops-view
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-dashboard
spec:
  addPrefix:
    prefix: "/#dashboard=true"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-ops-view-public
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - http-public
  routes:
  - match: Host(`kube-ops-view.lainecloud.com`) && Path(`/`)
    kind: Rule
    middlewares:
      - name: add-dashboard
    services:
    - name: kube-ops-view
      port: 80
